--- a/src/css/categories.css
+++ b/src/css/categories.css
@@ -22,19 +22,20 @@
 ul {
   display: flex;
   align-items: center;
+  list-style: none;
 }
 
-ul li {
-  list-style: none;
+.link {
   color: lightgrey;
   font-size: 16px;
   transition: all 0.4s ease-in-out;
+  text-decoration: none;
 }
 
-ul li:not(:last-child) {
+.link:not(:last-child) {
   margin-right: 40px;
 }
-ul li:hover {
+.link:hover {
   color: orange;
   cursor: pointer;
   padding-bottom: 8px;
